crates/laplace-macro/tests/ui/fail/model_mod_out_of_line.rs
// SPDX-License-Identifier: Apache-2.0

#[laplace_macro::model]
mod target;

fn main() {}
